infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fincore-ingress
  namespace: fincore
  labels:
    app.kubernetes.io/name: fincore-ingress
    app.kubernetes.io/part-of: fincore-360
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
spec:
  tls:
    - hosts:
        - banking.fincore360.com
      secretName: fincore-tls-cert
  rules:
    - host: banking.fincore360.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fincore-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fincore-web
                port:
                  number: 80
